# savtools

./: CMakeLists.txt
data/: sample_pext.tsv.bgz  test_out.vcf.gz.csi
include/: get_variants.hpp  zip_intersection.hpp  zip_intersection_pair.hpp
src/: iter_sav.cpp  make_header.cpp  sample_sav.cpp  seqnames.hpp  tsv2vcf.cpp  vcf_header.hpp
